--- a/package.json
+++ b/package.json
@@ -10,29 +10,28 @@
   "author": "Kristofor Carle <kris@maphubs.com>",
   "license": "GPL-3.0",
   "dependencies": {
-    "bluebird": "3.2.2",
-    "carto": "0.15.3",
+    "bluebird": "3.3.4",
+    "carto": "0.16.0",
     "compression": "1.6.1",
-    "connect-session-knex": "1.0.20",
     "debug": "2.2.0",
     "express": "4.13.4",
     "express-load": "1.1.15",
     "express-session": "1.13.0",
-    "knex": "0.9.0",
-    "lodash": "3.10.1",
-    "mapnik": "3.4.16",
-    "mapnik-reference": "8.5.2",
-    "morgan": "1.6.1",
-    "pg": "^4.4.6",
+    "knex": "0.10.0",
+    "lodash.find": "^4.3.0",
+    "mapnik": "3.5.8",
+    "mapnik-reference": "8.5.5",
+    "morgan": "1.7.0",
+    "pg": "^4.5.3",
     "response-time": "^2.3.1",
-    "tilelive": "5.12.1",
-    "tilelive-bridge": "2.2.3",
-    "tilelive-cache": "0.5.1",
+    "tilelive": "5.12.2",
+    "tilelive-bridge": "2.3.1",
+    "tilelive-cache": "0.6.5",
     "underscore": "1.8.3",
-    "winston": "2.1.1"
+    "winston": "2.2.0"
   },
   "devDependencies": {
-    "eslint": "1.10.3",
-    "eslint-plugin-flow-vars": "0.1.3"
+    "eslint": "2.7.0",
+    "eslint-plugin-flow-vars": "0.3.0"
   }
 }
