--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "mapnik": "3.5.8",
     "mapnik-reference": "8.5.5",
     "morgan": "1.7.0",
+    "newrelic": "^1.28.0",
     "pg": "^4.5.3",
     "response-time": "^2.3.1",
     "tilelive": "5.12.2",
