--- a/package.json
+++ b/package.json
@@ -10,19 +10,20 @@
   "author": "Kristofor Carle <kris@maphubs.com>",
   "license": "GPL-3.0",
   "dependencies": {
-    "bluebird": "3.3.4",
-    "carto": "0.16.0",
-    "compression": "1.6.1",
+    "bluebird": "3.4.0",
+    "carto": "0.16.2",
+    "compression": "1.6.2",
     "debug": "2.2.0",
     "express": "4.13.4",
     "express-load": "1.1.15",
     "express-session": "1.13.0",
-    "knex": "0.10.0",
-    "mapnik": "3.5.8",
+    "knex": "0.11.5",
+    "mapnik": "3.5.13",
     "mapnik-reference": "8.5.5",
     "morgan": "1.7.0",
-    "newrelic": "^1.28.0",
-    "pg": "^4.5.3",
+    "newrelic": "^1.28.1",
+    "pg": "^5.1.0",
+    "pg-native": "^1.10.0",
     "response-time": "^2.3.1",
     "tilelive": "5.12.2",
     "tilelive-bridge": "2.3.1",
@@ -31,7 +32,7 @@
     "winston": "2.2.0"
   },
   "devDependencies": {
-    "eslint": "2.7.0",
-    "eslint-plugin-flow-vars": "0.3.0"
+    "eslint": "2.12.0",
+    "eslint-plugin-flow-vars": "0.4.0"
   }
 }
