update deps; update docker build; switch to yarn

--- a/.eslintrc
+++ b/.eslintrc
@@ -1,16 +1,12 @@
 {
   "extends": "eslint:recommended",
   "rules": {
-    "flow-vars/define-flow-type": 1,
-    "flow-vars/use-flow-type": 1,
+    "flowtype/define-flow-type": 1,
+    "flowtype/use-flow-type": 1,
     semi: [2, "always"]
   },
-  
+
   "env": {
     "node": true
-  },
-
-  "plugins": [
-    "flow-vars"
-  ]
+  }
 }
