--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "compression": "1.6.2",
     "connect-ensure-login": "^0.1.1",
     "connect-session-knex": "^1.3.0",
+    "cookie-parser": "^1.4.3",
     "debug": "^2.3.2",
     "express": "4.14.0",
     "express-load": "1.1.15",
