--- a/package.json
+++ b/package.json
@@ -10,22 +10,22 @@
   "author": "Kristofor Carle <kris@maphubs.com>",
   "license": "GPL-3.0",
   "dependencies": {
-    "bluebird": "3.4.6",
+    "bluebird": "^3.4.7",
     "compression": "1.6.2",
     "connect-ensure-login": "^0.1.1",
     "connect-session-knex": "^1.3.0",
     "cookie-parser": "^1.4.3",
-    "debug": "^2.3.2",
+    "debug": "^2.6.0",
     "express": "4.14.0",
     "express-load": "1.1.15",
     "express-session": "^1.14.2",
     "knex": "^0.12.6",
     "morgan": "1.7.0",
-    "newrelic": "^1.29.0",
+    "newrelic": "^1.36.0",
     "passport": "^0.3.2",
-    "pg": "^6.1.0",
+    "pg": "^6.1.2",
     "pg-native": "^1.10.0",
-    "response-time": "^2.3.1",
+    "response-time": "^2.3.2",
     "tilelive": "5.12.2",
     "tilelive-bridge": "mapbox/tilelive-bridge#9b1d7c68703652bca9772f79a49dd18d189794c5",
     "tilelive-cache": "0.7.1",
@@ -33,7 +33,7 @@
     "xml": "^1.0.1"
   },
   "devDependencies": {
-    "eslint": "^3.10.0",
-    "eslint-plugin-flowtype": "^2.25.0"
+    "eslint": "^3.12.2",
+    "eslint-plugin-flowtype": "^2.29.2"
   }
 }
