--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "maphubs-tileserver",
-  "version": "1.0.0",
+  "version": "0.8.0",
   "description": "",
   "main": "app.js",
   "scripts": {
@@ -15,13 +15,15 @@
   "author": "Kristofor Carle <kris@maphubs.com>",
   "license": "GPL-3.0",
   "dependencies": {
-    "bluebird": "^3.4.7",
+    "@mapbox/tilelive": "^5.12.3",
+    "@mapbox/tilelive-bridge": "^2.3.1",
+    "bluebird": "^3.5.0",
     "compression": "1.6.2",
     "connect-ensure-login": "^0.1.1",
     "connect-session-knex": "^1.3.0",
     "cookie-parser": "^1.4.3",
-    "debug": "^2.6.0",
-    "express": "4.15.2",
+    "debug": "^2.6.2",
+    "express": "^4.15.2",
     "express-load": "1.1.15",
     "express-session": "^1.14.2",
     "knex": "^0.12.6",
@@ -29,14 +31,12 @@
     "lodash.find": "^4.6.0",
     "mbtiles": "^0.9.0",
     "mkdirp": "^0.5.1",
-    "morgan": "1.7.0",
-    "newrelic": "^1.36.0",
+    "morgan": "^1.8.1",
+    "newrelic": "^1.37.2",
     "passport": "^0.3.2",
     "pg": "^6.1.2",
     "pg-native": "^1.10.0",
     "response-time": "^2.3.2",
-    "tilelive": "5.12.2",
-    "tilelive-bridge": "mapbox/tilelive-bridge#9b1d7c68703652bca9772f79a49dd18d189794c5",
     "tilelive-file": "^0.0.3",
     "winston": "^2.3.0",
     "xml": "^1.0.1"
