--- a/package.json
+++ b/package.json
@@ -22,19 +22,19 @@
     "connect-ensure-login": "^0.1.1",
     "connect-session-knex": "^1.3.0",
     "cookie-parser": "^1.4.3",
-    "debug": "^2.6.6",
-    "express": "^4.15.2",
+    "debug": "^2.6.8",
+    "express": "^4.15.3",
     "express-load": "1.1.15",
-    "express-session": "^1.15.2",
+    "express-session": "^1.15.3",
     "knex": "^0.13.0",
     "lockfile": "^1.0.3",
     "lodash.find": "^4.6.0",
-    "mbtiles": "^0.9.0",
     "mkdirp": "^0.5.1",
     "morgan": "^1.8.1",
     "passport": "^0.3.2",
-    "pg": "^6.1.5",
+    "pg": "^6.2.2",
     "pg-native": "^1.10.1",
+    "raven": "^2.0.1",
     "response-time": "^2.3.2",
     "tilelive-file": "^0.0.3",
     "winston": "^2.3.0",
@@ -42,6 +42,6 @@
   },
   "devDependencies": {
     "eslint": "^3.19.0",
-    "eslint-plugin-flowtype": "^2.32.1"
+    "eslint-plugin-flowtype": "^2.33.0"
   }
 }
