--- a/package.json
+++ b/package.json
@@ -20,10 +20,10 @@
     "bluebird": "^3.5.0",
     "compression": "1.6.2",
     "connect-session-knex": "^1.3.0",
+    "consign": "^0.1.6",
     "cookie-parser": "^1.4.3",
     "debug": "^2.6.8",
     "express": "^4.15.3",
-    "express-load": "1.1.15",
     "express-session": "^1.15.3",
     "knex": "^0.13.0",
     "lockfile": "^1.0.3",
