--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "version": "",
     "postversion": "git push && git push --tags && npm run changelog",
     "deploy-patch": "npm version patch --force -m \"version %s\"",
-    "deploy-minor": "npm version minor --force -m \"version %s\""
+    "deploy-minor": "npm version minor --force -m \"version %s\"",
+    "snyk-protect": "snyk protect"
   },
   "author": "Kristofor Carle <kris@maphubs.com>",
   "license": "GPL-3.0",
@@ -18,7 +19,7 @@
     "@mapbox/tilelive": "^5.12.6",
     "@mapbox/tilelive-bridge": "^2.4.0",
     "bluebird": "^3.5.0",
-    "compression": "1.6.2",
+    "compression": "1.7.0",
     "connect-session-knex": "^1.3.0",
     "consign": "^0.1.6",
     "cookie-parser": "^1.4.3",
@@ -35,6 +36,7 @@
     "pg-native": "^1.10.1",
     "raven": "^2.0.1",
     "response-time": "^2.3.2",
+    "snyk": "^1.37.0",
     "tilelive-file": "^0.0.3",
     "winston": "^2.3.0",
     "xml": "^1.0.1"
