--- a/package.json
+++ b/package.json
@@ -11,38 +11,40 @@
     "postversion": "git push && git push --tags && npm run changelog",
     "deploy-patch": "npm version patch --force -m \"version %s\"",
     "deploy-minor": "npm version minor --force -m \"version %s\"",
-    "snyk-protect": "snyk protect"
+    "snyk-protect": "snyk protect",
+    "prepublish": "npm run snyk-protect"
   },
   "author": "Kristofor Carle <kris@maphubs.com>",
   "license": "GPL-3.0",
   "dependencies": {
-    "@mapbox/tilelive": "^5.12.6",
-    "@mapbox/tilelive-bridge": "^2.4.0",
-    "bluebird": "^3.5.0",
+    "@mapbox/tilelive": "5.12.6",
+    "@mapbox/tilelive-bridge": "2.4.0",
+    "bluebird": "3.5.0",
     "compression": "1.7.0",
-    "connect-session-knex": "^1.3.0",
-    "consign": "^0.1.6",
-    "cookie-parser": "^1.4.3",
-    "debug": "^2.6.8",
-    "express": "^4.15.3",
-    "express-session": "^1.15.3",
-    "knex": "^0.13.0",
-    "lockfile": "^1.0.3",
-    "lodash.find": "^4.6.0",
-    "mkdirp": "^0.5.1",
-    "morgan": "^1.8.1",
-    "passport": "^0.3.2",
-    "pg": "^6.2.2",
-    "pg-native": "^1.10.1",
-    "raven": "^2.0.1",
-    "response-time": "^2.3.2",
-    "snyk": "^1.37.0",
-    "tilelive-file": "^0.0.3",
-    "winston": "^2.3.0",
-    "xml": "^1.0.1"
+    "connect-session-knex": "^1.3.4",
+    "consign": "0.1.6",
+    "cookie-parser": "1.4.3",
+    "debug": "2.6.8",
+    "express": "4.15.3",
+    "express-session": "^1.15.4",
+    "knex": "0.13.0",
+    "lockfile": "1.0.3",
+    "lodash.find": "4.6.0",
+    "mkdirp": "0.5.1",
+    "morgan": "^1.8.2",
+    "passport": "0.3.2",
+    "pg": "^7.0.2",
+    "pg-native": "^2.0.1",
+    "raven": "^2.1.1",
+    "response-time": "2.3.2",
+    "snyk": "1.37.0",
+    "tilelive-file": "0.0.3",
+    "winston": "^2.3.1",
+    "xml": "1.0.1"
   },
   "devDependencies": {
-    "eslint": "^3.19.0",
-    "eslint-plugin-flowtype": "^2.33.0"
-  }
+    "eslint": "^4.3.0",
+    "eslint-plugin-flowtype": "^2.35.0"
+  },
+  "snyk": true
 }
