--- a/.eslintrc
+++ b/.eslintrc
@@ -28,7 +28,12 @@
       "jsx": true
     }
   },
-  "extends": ["eslint:recommended", "plugin:promise/recommended"],
+  "extends": [
+    "eslint:recommended",
+    "plugin:promise/recommended",
+    "plugin:security/recommended",
+    "plugin:unicorn/recommended"
+  ],
   "rules": {
     "generator-star-spacing": 1,
     "babel/object-curly-spacing": 1,
@@ -44,11 +49,14 @@
   },
 
   "env": {
-    "node": true
+    "node": true,
+    "es6": true
   },
   "plugins": [
     "babel",
     "promise",
-    "flowtype"
+    "flowtype",
+     "security",
+     "unicorn"
   ]
 }
