--- a/package.json
+++ b/package.json
@@ -23,38 +23,38 @@
     "babel-plugin-transform-flow-strip-types": "^6.22.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
-    "babel-register": "^6.24.1",
+    "babel-register": "^6.26.0",
     "bluebird": "3.5.0",
     "compression": "1.7.0",
-    "connect-session-knex": "^1.3.4",
+    "connect-session-knex": "^1.4.0",
     "consign": "0.1.6",
     "cookie-parser": "1.4.3",
-    "debug": "2.6.8",
-    "express": "4.15.3",
-    "express-session": "^1.15.4",
+    "debug": "^3.0.0",
+    "express": "^4.15.4",
+    "express-session": "^1.15.5",
     "knex": "0.13.0",
     "lockfile": "1.0.3",
     "lodash.find": "4.6.0",
     "mkdirp": "0.5.1",
     "morgan": "^1.8.2",
-    "passport": "0.3.2",
-    "pg": "^7.0.2",
+    "passport": "^0.4.0",
+    "pg": "^7.1.2",
     "pg-native": "^2.0.1",
     "raven": "^2.1.1",
     "response-time": "2.3.2",
-    "snyk": "1.37.0",
+    "snyk": "^1.38.2",
     "tilelive-file": "0.0.3",
     "winston": "^2.3.1",
     "xml": "1.0.1"
   },
   "devDependencies": {
-    "eslint": "^4.3.0",
+    "eslint": "^4.4.1",
     "eslint-plugin-babel": "^4.1.2",
     "eslint-plugin-flowtype": "^2.35.0",
     "eslint-plugin-promise": "^3.5.0",
     "eslint-plugin-security": "^1.4.0",
     "eslint-plugin-unicorn": "^2.1.2",
-    "flow-bin": "^0.51.1"
+    "flow-bin": "^0.53.0"
   },
   "snyk": true
 }
