--- a/package.json
+++ b/package.json
@@ -18,15 +18,14 @@
   "license": "GPL-3.0",
   "dependencies": {
     "@mapbox/tilelive": "5.12.6",
-    "@mapbox/tilelive-bridge": "2.4.0",
-    "babel-eslint": "^7.2.3",
+    "@mapbox/tilelive-bridge": "2.5.1",
     "babel-plugin-transform-flow-strip-types": "^6.22.0",
     "babel-preset-env": "^1.6.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
     "babel-register": "^6.26.0",
     "bluebird": "3.5.0",
-    "compression": "1.7.0",
+    "compression": "1.7.1",
     "connect-session-knex": "^1.4.0",
     "consign": "0.1.6",
     "cookie-parser": "1.4.3",
@@ -49,13 +48,14 @@
     "xml": "1.0.1"
   },
   "devDependencies": {
+    "babel-eslint": "^8.0.1",
     "eslint": "^4.4.1",
     "eslint-plugin-babel": "^4.1.2",
     "eslint-plugin-flowtype": "^2.35.0",
     "eslint-plugin-promise": "^3.5.0",
     "eslint-plugin-security": "^1.4.0",
     "eslint-plugin-unicorn": "^2.1.2",
-    "flow-bin": "^0.53.0"
+    "flow-bin": "0.56.0"
   },
   "snyk": true
 }
