--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "@mapbox/tilelive": "6.0.0",
     "@mapbox/tilelive-bridge": "3.0.0",
     "babel-plugin-transform-flow-strip-types": "^6.22.0",
-    "babel-preset-env": "^1.6.0",
+    "babel-preset-env": "^1.7.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
     "babel-register": "^6.26.0",
@@ -30,32 +30,33 @@
     "consign": "0.1.6",
     "cookie-parser": "1.4.3",
     "debug": "^3.0.0",
-    "express": "^4.15.4",
+    "express": "^4.16.3",
     "express-session": "^1.15.5",
-    "knex": "0.14.4",
-    "lockfile": "1.0.3",
+    "knex": "0.14.6",
+    "lockfile": "1.0.4",
     "lodash.find": "4.6.0",
+    "mapnik": "/opt/node-mapnik",
     "mkdirp": "0.5.1",
     "morgan": "^1.8.2",
     "passport": "^0.4.0",
-    "pg": "^7.4.1",
-    "pg-native": "^2.0.1",
-    "raven": "^2.4.2",
+    "pg": "^7.4.3",
+    "pg-native": "^3.0.0",
+    "raven": "^2.6.1",
     "response-time": "2.3.2",
-    "snyk": "^1.69.10",
+    "snyk": "^1.80.0",
     "tilelive-file": "0.0.3",
-    "winston": "^2.3.1",
+    "winston": "^2.4.2",
     "xml": "1.0.1"
   },
   "devDependencies": {
-    "babel-eslint": "^8.2.2",
-    "eslint": "^4.18.2",
-    "eslint-plugin-babel": "^4.1.2",
-    "eslint-plugin-flowtype": "^2.46.1",
-    "eslint-plugin-promise": "^3.5.0",
+    "babel-eslint": "^8.2.3",
+    "eslint": "^4.19.1",
+    "eslint-plugin-babel": "^5.1.0",
+    "eslint-plugin-flowtype": "^2.46.3",
+    "eslint-plugin-promise": "^3.7.0",
     "eslint-plugin-security": "^1.4.0",
-    "eslint-plugin-unicorn": "^4.0.2",
-    "flow-bin": "0.66.0"
+    "eslint-plugin-unicorn": "^4.0.3",
+    "flow-bin": "0.72.0"
   },
   "snyk": true
 }
