--- a/package.json
+++ b/package.json
@@ -18,21 +18,23 @@
   "license": "GPL-3.0",
   "dependencies": {
     "@mapbox/tilelive": "6.0.0",
-    "@mapbox/tilelive-bridge": "3.0.0",
+    "@mapbox/tilelive-bridge": "3.1.1",
     "babel-plugin-transform-flow-strip-types": "^6.22.0",
     "babel-preset-env": "^1.7.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
     "babel-register": "^6.26.0",
-    "bluebird": "3.5.1",
-    "compression": "1.7.2",
+    "bluebird": "3.5.2",
+    "compression": "1.7.3",
     "connect-session-knex": "^1.4.0",
     "consign": "0.1.6",
     "cookie-parser": "1.4.3",
-    "debug": "^3.0.0",
+    "debug": "^4.0.1",
+    "eslint-plugin-import": "^2.14.0",
+    "eslint-plugin-node": "^7.0.1",
     "express": "^4.16.3",
     "express-session": "^1.15.5",
-    "knex": "0.14.6",
+    "knex": "0.15.2",
     "lockfile": "1.0.4",
     "lodash.find": "4.6.0",
     "mapnik": "/opt/node-mapnik",
@@ -45,18 +47,20 @@
     "response-time": "2.3.2",
     "snyk": "^1.80.0",
     "tilelive-file": "0.0.3",
-    "winston": "^2.4.2",
+    "winston": "^3.1.0",
     "xml": "1.0.1"
   },
   "devDependencies": {
-    "babel-eslint": "^8.2.3",
-    "eslint": "^4.19.1",
+    "babel-eslint": "^10.0.1",
+    "eslint": "^5.6.1",
+    "eslint-config-standard": "^12.0.0",
     "eslint-plugin-babel": "^5.1.0",
     "eslint-plugin-flowtype": "^2.46.3",
-    "eslint-plugin-promise": "^3.7.0",
+    "eslint-plugin-promise": "^4.0.1",
     "eslint-plugin-security": "^1.4.0",
-    "eslint-plugin-unicorn": "^4.0.3",
-    "flow-bin": "0.72.0"
+    "eslint-plugin-standard": "^4.0.0",
+    "eslint-plugin-unicorn": "^6.0.1",
+    "flow-bin": "0.81.0"
   },
   "snyk": true
 }
