--- a/package.json
+++ b/package.json
@@ -31,8 +31,6 @@
     "consign": "0.1.6",
     "cookie-parser": "1.4.3",
     "debug": "^4.0.1",
-    "eslint-plugin-import": "^2.14.0",
-    "eslint-plugin-node": "^7.0.1",
     "express": "^4.16.3",
     "express-session": "^1.15.5",
     "knex": "0.15.2",
@@ -49,6 +47,7 @@
     "snyk": "^1.80.0",
     "tilelive-file": "0.0.3",
     "winston": "^3.1.0",
+    "winston-daily-rotate-file": "^3.3.3",
     "xml": "1.0.1"
   },
   "devDependencies": {
@@ -61,7 +60,9 @@
     "eslint-plugin-security": "^1.4.0",
     "eslint-plugin-standard": "^4.0.0",
     "eslint-plugin-unicorn": "^6.0.1",
-    "flow-bin": "0.81.0"
+    "flow-bin": "0.81.0",
+    "eslint-plugin-import": "^2.14.0",
+    "eslint-plugin-node": "^7.0.1"
   },
   "snyk": true
 }
