--- a/package.json
+++ b/package.json
@@ -29,7 +29,6 @@
     "bluebird": "3.5.2",
     "compression": "1.7.3",
     "connect-session-knex": "^1.4.0",
-    "consign": "0.1.6",
     "cookie-parser": "1.4.3",
     "debug": "^4.0.1",
     "express": "^4.16.3",
@@ -57,13 +56,13 @@
     "eslint-config-standard": "^12.0.0",
     "eslint-plugin-babel": "^5.1.0",
     "eslint-plugin-flowtype": "^2.46.3",
+    "eslint-plugin-import": "^2.14.0",
+    "eslint-plugin-node": "^7.0.1",
     "eslint-plugin-promise": "^4.0.1",
     "eslint-plugin-security": "^1.4.0",
     "eslint-plugin-standard": "^4.0.0",
     "eslint-plugin-unicorn": "^6.0.1",
-    "flow-bin": "0.81.0",
-    "eslint-plugin-import": "^2.14.0",
-    "eslint-plugin-node": "^7.0.1"
+    "flow-bin": "0.81.0"
   },
   "snyk": true
 }
